# ArXivFuturaSearch

./: .dockerignore  .env.dev.example  .env.docker.example  .env.example  .env.prod.example  .env.tpl  .env_example  .gitignore  CHANGELOG.md  Caddyfile  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGLIORAMENTI.md  Makefile  README.md  SETUP.md  START.md  alembic.ini  create-sa.ps1  docker-compose.dev.yml  docker-compose.yml  guida.md  instruction.txt  intrsuction.txt  pyproject.toml  run-dev.sh  run-env.ps1  run-env.sh  run.sh
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  arxiv_document_loader.py  arxiv_loader.py  autocomplete.py  background_tasks.py  cache.py  chunking.py  circuit_breaker.py  config.py  config_extensions.py  container.py  dependencies.py  embeddings.py  error_handling.py  evals.py  hybrid_search.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  multi_query.py  pooling.py  py.typed  query_expansion.py  rag.py  redis_cache.py  reranking.py  retry.py  schemas.py  shutdown.py  tracing.py  validation.py  validation_middleware.py  vectorstore.py  vectorstore_chroma.py  vectorstore_pgvector.py
app/alerts/: notifications.py  service.py
app/api/: __init__.py  advanced_search.py  alerts.py  audit.py  auth.py  collections.py  conversations.py  evaluation.py  export.py  monitoring.py  schemas.py  search.py  web.py
app/audit/: exporters.py  middleware.py  service.py
app/auth/: dependencies.py  middleware.py  oauth.py  schemas.py  security.py  service.py
app/cache/: __init__.py  semantic.py  warming.py
app/collections/: manager.py
app/conversation/: manager.py  models.py
app/database/: base.py  session.py
app/embeddings/: __init__.py  embeddings.py  mmr.py  native.py  reranker.py
app/embeddings/batch/: processor.py
app/errors/: handlers.py
app/export/: manager.py
app/llm/: native.py
app/multimodal/: search.py
app/pooling/: adaptive.py
app/rag/: __init__.py  llm.py  native.py  prompts.py  rag_chain.py
app/repositories/: base.py  papers.py
app/retrieval/: bm25.py
app/services/: __init__.py  index_service.py
data/: test_dataset_example.json
data/chroma_db/: chroma.sqlite3
docker/prometheus/: prometheus.yml
locust/: .gitignore  README.md  config.py  locustfile.py  run.bat  run.sh
scripts/: add_license_headers.py  dev-setup.bat  dev-setup.sh  init-postgres.sql
templates/: base.html  build.html  config_view.html  index.html  index_view.html
tests/: conftest.py  test_api.py  test_autocomplete.py  test_background_tasks.py  test_chunking.py  test_hybrid_search.py  test_multi_query.py  test_redis_cache.py  test_reranking.py  test_retrieval.py
tests/e2e/: test_search_flow.py
tests/integration/: test_rag_pipeline.py
tests/load/: locustfile.py
