[project]
name = "arxiv-rag-copilot"
version = "0.3.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.4.22",
    "datasets>=4.5.0",
    "fastapi>=0.128.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "langchain>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-postgres>=0.0.12",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pgvector>=0.3.0",
    "prometheus-client>=0.19.0",
    "psycopg>=3.2.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.12.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "spacy>=3.7.0",
    "sse-starlette>=3.2.0",
    "structlog>=25.5.0",
    "tenacity>=9.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.32.0",
]
